# fastCV

./: CMakeLists.txt  README.md
include/fastcv/: cli.h  config.h  cross_validation.h  data_export.h  dim_reduction.h  external_pca.h  fastcv.h  grm.h  ld_prune.h  memory_estimate.h  misc_util.h  pc_corrector.h  plink_reader.h  simd_util.h  types.h
src/: cli.cpp  config.cpp  cross_validation.cpp  data_export.cpp  dim_reduction.cpp  external_pca.cpp  grm.cpp  ld_prune.cpp  main.cpp  memory_estimate.cpp  pc_corrector.cpp  plink_reader.cpp
